@@ -50,6 +50,21 @@ const renderModal = () => {
 };
 
 describe( 'ToS modal', () => {
+	beforeAll( () => {
+		// eslint-disable-next-line camelcase
+		global.wcpay_tos_settings = {
+			trackStripeConnected: {
+				// eslint-disable-next-line camelcase
+				is_existing_stripe_account: true,
+			},
+		};
+	} );
+
+	afterAll( () => {
+		// eslint-disable-next-line camelcase
+		delete global.wcpay_tos_settings;
+	} );
+
 	afterEach( () => {
 		jest.clearAllMocks();
 	} );
