@@ -1,4 +1,9 @@
 /**
+ * External dependencies
+ */
+import domReady from '@wordpress/dom-ready';
+
+/**
  * Checks if site tracking is enabled.
  *
  * @return {boolean} True if site tracking is enabled.
@@ -14,15 +19,20 @@ function isEnabled() {
  * @param {Object?} eventProperties Event properties.
  */
 function recordEvent( eventName, eventProperties ) {
-	const recordFunction =
-		window.wc?.tracks?.recordEvent ?? window.wcTracks.recordEvent;
-	recordFunction( eventName, eventProperties );
+	// Wc-admin track script is enqueued after ours, wrap in domReady
+	// to make sure we're not too early.
+	domReady( () => {
+		const recordFunction =
+			window.wc?.tracks?.recordEvent ?? window.wcTracks.recordEvent;
+		recordFunction( eventName, eventProperties );
+	} );
 }
 
 const events = {
 	CONNECT_ACCOUNT_CLICKED: 'wcpay_connect_account_clicked',
 	CONNECT_ACCOUNT_VIEW: 'page_view',
 	CONNECT_ACCOUNT_LEARN_MORE: 'wcpay_welcome_learn_more',
+	CONNECT_ACCOUNT_STRIPE_CONNECTED: 'wcpay_stripe_connected',
 };
 
 export default {
