@@ -5,6 +5,7 @@
 * Update - Use Site Language when rendering Stripe elements.
 * Update - Use blog ID for authenticating most of the requests.
 * Fix: Misaligned columns on Deposits page.
+* Add - Tracking for returning from OAuth connection.
 
 = 2.4.0 - 2021-05-12 =
 * Update - Improve the Connect Account page.
